# subtitle-fusion

./: .env.example  README.md  pyproject.toml
config/: scoring.yaml  settings.yaml
src/: exporters.py  fusion.py  imdb_index.py  main.py  models.py  pipeline.py  scoring.py
tests/: test_fusion.py  test_imdb_index.py  test_scoring.py
